--- a/src/main/resources/fusefis.yaml
+++ b/src/main/resources/fusefis.yaml
@@ -423,6 +423,7 @@ builds:
     - '-DprojectMetaSkip=true'
   dependencies:
   - wildfly-camel-5.3.0-${version.fuse.prefix}
+  - wildfly-camel-examples-5.3.0-${version.fuse.prefix}
   - redhat-fuse-${version.fuse.prefix}
 
 - name: karaf-quickstarts-${version.fuse.prefix}
